:tada: Begin the Ske Binary Project

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 	  	"app": "./bin/ske app"
 	},
     "config": {
-        "vendor-dir": "pkg",
+        "vendor-dir": "php_packages",
         "preferred-install": "dist",
         "sort-packages": true
     },
